# ParallelCalcs

./: CMakeLists.txt  main.cpp
